<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity"
    tools:ignore="VisualLintBounds,VisualLintTextFieldSize">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="0dp"
        android:background="@color/white"
        android:id="@+id/toolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="294dp"
                android:layout_height="46dp"
                android:text="@string/samachaar"
                android:textColor="#039BE5"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/favourite"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:contentDescription="@string/favourite"
                app:srcCompat="@drawable/heart" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/include"
        android:layout_below="@+id/toolbar"
        app:tabTextColor="#618C8F"
        app:tabSelectedTextColor="#03A9F4"
        app:tabIndicatorColor="#03A9F4"
        app:tabIndicatorHeight="3.5dp"
        app:tabMode="scrollable"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/white">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general"
            android:id="@+id/home">

        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports"
            android:id="@+id/sports">

        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health"
            android:id="@+id/health">

        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/science"
            android:id="@+id/science">

        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entertainment"
            android:id="@+id/entertainment">

        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technology"
            android:id="@+id/technology">

        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business"
            android:id="@+id/business">

        </com.google.android.material.tabs.TabItem>

    </com.google.android.material.tabs.TabLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        app:cardElevation="-1dp"
        app:cardBackgroundColor="@android:color/transparent">

        <androidx.appcompat.widget.SearchView
            android:layout_width="match_parent"
            android:id="@+id/search_view"
            app:defaultQueryHint="search news.."
            app:iconifiedByDefault="false"
            android:layout_height="?attr/actionBarSize">
        </androidx.appcompat.widget.SearchView>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_main"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>