<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/main_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="8dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="6dp"
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_title"
                android:layout_width="319dp"
                android:layout_height="60dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:padding="5dp"
                android:text="@string/main_heading"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                app:srcCompat="@drawable/heart" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="6"
                android:padding="5dp"
                android:id="@+id/content"
                android:textSize="15sp"
                android:text="@string/main_content">
            </TextView>


        <ImageView
            android:id="@+id/img_headline"
            android:layout_weight="1"
            android:src="@drawable/nf"
            android:scaleType="centerCrop"
            android:padding="5dp"
            app:cardCornerRadius="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </ImageView>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/by_shawn"
        android:textSize="16sp"
        android:textStyle="bold"
        android:id="@+id/text_source"
        android:textColor="@color/black"
        android:padding="5dp"
        >

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/time"
        android:padding="5dp"
        android:textColor="@color/black"
        android:text="@string/published_at"
        android:textStyle="italic"
        android:textSize="12sp">

    </TextView>


    </LinearLayout>

</androidx.cardview.widget.CardView>